[package]
name = "sqlite-vfs"
version = "0.2.0"
authors = ["Markus Ast <m@rkusa.st>"]
license = "MIT OR Apache-2.0"
edition = "2021"
description = "Build SQLite virtual file systems (VFS) by implementing a simple Rust trait."
repository = "https://github.com/rkusa/sqlite-vfs"
documentation = "https://docs.rs/sqlite-vfs"
keywords = ["sqlite", "vfs"]

[workspace]
members = ["test-vfs"]

[dependencies]
log = "0.4"
time = { path = "../time/time", features = ["icp"] }
libsqlite3-sys = { path = "../rusqlite/libsqlite3-sys", package = "libsqlite3-sys-ic", features = [
    "bundled",
] }
ic-cdk = "0.8.1"

[features]
default = []

# Only enable when building with the included `./test-vfs`.
sqlite_test = []

# Enable an delegate to parent VFS: `xSetSystemCall`, `xGetSystemCall` and `xNextSystemCall`
syscall = []

# Enable an delegate to parent VFS: `xDlOpen`, `xDlError`, `xDlSym` and `xDlClose`
loadext = []
